--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ h1, h2, h3 {
     line-height: 1;
 }
 
-p, a {
+p, a, li {
     font-family: 'Inter', sans-serif;
     letter-spacing: -.06em;
     line-height: 1.2;
@@ -42,10 +42,12 @@ a:hover {
 .topnav {
     width: 100vw;
     height: 80px;
-    background-color: #ffffff;
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    position: fixed;
+    z-index: 1;
+    mix-blend-mode: difference;
 }
 
 .navlist {
@@ -53,14 +55,15 @@ a:hover {
 }
 
 .topnav a {
-    color: #151515;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     margin: 12px;
+    color: #ffffff;
 }
 
 .topnav a:hover {
     color: gray;
+    transition: .3s;
 }
 
 .topnav img {
@@ -88,19 +91,76 @@ a:hover {
     color: #9B9B9B;
 }
 
-.works {
-    width: 100vw;
-}
-
-.work {
+.latest {
     width: 100vw;
     height: 100vh;
     background-color: #151515;
+    position: relative;
 }
 
-.work img {
-    width: 100%;
+.latest img {
     height: 100%;
+    width: 100vw;
+    object-fit: cover; 
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    background-color: #000;
+    opacity: .3;
+    position: absolute;
+    bottom: 0;
+}
+
+.latest-desc {
+    height: 80%;
+    color: #F5F5F5;
+    position: absolute;
+    bottom: 80px;
+    left: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.latest-desc:hover {
+    text-decoration: none;
+}
+
+.latest-desc li {
+    opacity: .5;
+    font-size: 14px;
+    letter-spacing: -.01em;
+}
+
+.latest-desc h2 {
+    font-size: 42px;
+    font-weight: 500;
+    opacity: .9;
+}
+
+.latest-desc h2:hover {
+    opacity: 1;
+    transition: .2s;
+}
+
+.latest-name {
+    display: flex;
+}
+
+#invisible {
+    display: none;
+    font-weight: 200;
+    font-size: 14px;
+    letter-spacing: -.01em;
+}
+
+#show-invisible:hover~#invisible {
+    opacity: .5;
+    transition: .4s;
+    display: block;
+    margin: 0;
 }
 
 .advantages {
@@ -112,7 +172,7 @@ a:hover {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     padding-top: 60px;
     margin-bottom: 200px;
 }
@@ -127,6 +187,7 @@ a:hover {
     font-weight: 500;
     line-height: 1;
     width: 50vw;
+    margin: 0;
 }
 
 .advantages-p {
@@ -134,6 +195,43 @@ a:hover {
     font-size: 20px;
     font-weight: 500;
     width: 50vw;
+}
+
+.brands {
+    padding: 0 0 100px 0;
+    display: block;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden
+}
+
+.logos {
+    display: inline-block;
+    -webkit-animation: marquee 35s infinite linear;
+    -moz-animation: marquee 35s infinite linear;
+    animation: marquee 35s infinite linear;
+}
+
+.brands img {
+    max-width: 150px;
+    opacity: .9;
+    margin: 0 0 0 98px;
+    display: inline-block;
+}
+
+@keyframes marquee {
+    0% {
+       transform: translate(0, 0);
+    }
+    
+    100% {
+       transform: translate(-100%, 0);
+    }
+}
+
+.brands img:hover {
+    padding: 0px 3px;
+    transition: .3;
 }
 
 .more-works {
@@ -153,6 +251,12 @@ a:hover {
 .more-works-card img {
     width: 100%;
     height: 440px;
+    object-fit: cover; 
+}
+
+.more-works-card img:hover {
+    opacity: .95;
+    transition: .4;
 }
 
 .more-works-text {
@@ -174,7 +278,7 @@ a:hover {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     padding-top: 60px;
     margin-bottom: 200px;
 }
@@ -185,6 +289,7 @@ a:hover {
     font-weight: 500;
     line-height: 1;
     width: 50vw;
+    margin: 0;
 }
 
 .services h2 span {
@@ -214,20 +319,30 @@ a:hover {
 }
 
 .services-cards p {
-
+    color: #E6E2DD;
+    letter-spacing: -.01em;
+    opacity: .6;
+    font-weight: 300;
+    user-select: none;
 }
 
 .card {
     width: 22vw;
     min-height: 460px;
-    padding: 40px 20px 40px 20px;
+    padding: 50px 30px 50px 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     background-color: #E6E2DD;
 }
 
+.card img {
+    width: 45px;
+    opacity: .9;
+}
+
 .card:hover {
     background-color: #9B9B9B;
     transition: 0.5s;
+    text-decoration: none;
 }
