--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body {
     overflow-x: hidden;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
     font-family: 'Inter', sans-serif;
     letter-spacing: -.04em;
     line-height: 1;
@@ -33,10 +33,17 @@ p, a, li {
 a:hover {
     text-decoration: none;
     color: gray;
+    transition: .3s;
 }
 
 .so-row {
     padding: 0 60px 0 60px;
+}
+
+.annotation {
+    opacity: .5;
+    font-size: 14px;
+    letter-spacing: -.01em;
 }
 
 .topnav {
@@ -55,19 +62,25 @@ a:hover {
 }
 
 .topnav a {
+    color: #ffffff;
+    margin-top: 12px;
+}
+
+.navlist a {
     font-size: 20px;
     font-weight: 500;
-    margin: 12px;
-    color: #ffffff;
+    margin-left: 24px;
 }
 
 .topnav a:hover {
     color: gray;
     transition: .3s;
+    font-weight: 500;
 }
 
 .topnav img {
     width: 70px;
+    margin: 0;
 }
 
 .greetings {
@@ -114,11 +127,11 @@ a:hover {
 }
 
 .latest-desc {
-    height: 80%;
     color: #F5F5F5;
     position: absolute;
-    bottom: 80px;
+    bottom: 90px;
     left: 60px;
+    top: 90px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -126,12 +139,6 @@ a:hover {
 
 .latest-desc:hover {
     text-decoration: none;
-}
-
-.latest-desc li {
-    opacity: .5;
-    font-size: 14px;
-    letter-spacing: -.01em;
 }
 
 .latest-desc h2 {
@@ -154,10 +161,10 @@ a:hover {
     font-weight: 200;
     font-size: 14px;
     letter-spacing: -.01em;
+    color: #BBBBBB;
 }
 
 #show-invisible:hover~#invisible {
-    opacity: .5;
     transition: .4s;
     display: block;
     margin: 0;
@@ -173,8 +180,8 @@ a:hover {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    padding-top: 60px;
-    margin-bottom: 200px;
+    padding-top: 80px;
+    margin-bottom: 35vh;
 }
 
 .advantages-text span {
@@ -190,15 +197,59 @@ a:hover {
     margin: 0;
 }
 
-.advantages-p {
+.advantages h4 {
+    color: #151515;
+    font-size: 22px;
+    font-variant-caps: all-petite-caps;
+    font-weight: 600;
+    line-height: 1;
+    width: 70vw;
+    margin: 0;
+}
+
+.advantages-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 50vw;
+}
+
+.advantages-right p {
     color: #151515;
     font-size: 20px;
     font-weight: 500;
     width: 50vw;
 }
 
+.advantages-button-cont {
+    display: flex;
+    width: 100%;
+}
+
+.advantages-button {
+    max-width: 260px;
+    max-height: 120px;
+    border: 1px solid rgb(186, 186, 186);
+    border-radius: 3em;
+    color: #151515;
+    font-size: 14px;
+    font-weight: 560;
+    margin-top: 45px;
+    background-color: #F5F5F5;
+    display: inline-block;
+    padding: 25px 35px;
+    transition: .5s;
+}
+
+.advantages-button:hover {
+    color: #F5F5F5;
+    border: 1px solid #2D2D2D;
+    background-color: #2D2D2D;
+    transition: .5s;
+}
+
 .brands {
-    padding: 0 0 100px 0;
+    padding: 0 0 25vh 0;
     display: block;
     width: 100%;
     white-space: nowrap;
@@ -213,7 +264,7 @@ a:hover {
 }
 
 .brands img {
-    max-width: 150px;
+    width: 190px;
     opacity: .9;
     margin: 0 0 0 98px;
     display: inline-block;
@@ -230,16 +281,26 @@ a:hover {
 }
 
 .brands img:hover {
-    padding: 0px 3px;
+    /* padding: 0px 3px; */
     transition: .3;
 }
 
 .more-works {
     display: flex;
+    flex-direction: column;
+    padding-bottom: 180px;
+}
+
+.more-works p {
+    color: #5f5f5f;
+}
+
+.more-works-row {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    padding-bottom: 140px;
+    align-items: flex-start;
+    margin-top: 40px;
 }
 
 .more-works-card {
@@ -248,25 +309,63 @@ a:hover {
     flex-direction: column;
 }
 
-.more-works-card img {
+.more-works-card #img1 {
     width: 100%;
-    height: 440px;
+    height: 60vh;
     object-fit: cover; 
+    transition: .5;
+}
+
+.more-works-card #img2 {
+    width: 100%;
+    height: 60vh;
+    object-fit: cover; 
+    transition: .5;
 }
 
 .more-works-card img:hover {
-    opacity: .95;
-    transition: .4;
+    transition: .5;
+    opacity: .92;
 }
 
 .more-works-text {
     padding-top: 40px;
 }
 
-.more-works h3 {
+.more-works-text p {
+    padding-bottom: 0;
+}
+
+.more-works-text h3 {
     color: #151515;
     font-size: 32px;
     font-weight: 500;
+    margin-bottom: 30px;
+}
+
+.view-case {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.view-case a {
+    color: #151515;
+    font-size: 14px;
+    font-weight: 600;
+    align-items: center;
+    transition: .3s;
+}
+
+.view-case img {
+    color: #151515;
+    width: 8px;
+    margin: 0 0 2px 5px;
+}
+
+.view-case a:hover {
+    opacity: .6;
+    transition: .3s;
 }
 
 .services {
@@ -279,7 +378,7 @@ a:hover {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    padding-top: 60px;
+    padding-top: 80px;
     margin-bottom: 200px;
 }
 
@@ -308,7 +407,7 @@ a:hover {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 140px;
+    padding-bottom: 180px;
 }
 
 .services-cards h3 {
@@ -345,4 +444,107 @@ a:hover {
     background-color: #9B9B9B;
     transition: 0.5s;
     text-decoration: none;
+}
+
+.explore-more {
+    width: 100vw;
+    background-color: #E6E2DD;
+    padding-top: 130px;
+    padding-bottom: 160px;
+}
+
+.explore-more a {
+    color: #151515;
+}
+
+.explore-more a:hover {
+    transition: .5s;
+}
+
+.explore-more p {
+    color: #555;
+}
+
+.explore-cont {
+    margin-top: 40px;
+}
+
+.explore-work {
+    position: relative;
+}
+
+.explore-work hr {
+    border-top: 1px solid #555;
+    opacity: .1;
+}
+
+.explore-work h1 {
+    color: #151515;
+    font-size: 60px;
+}
+
+.explore-work h4 {
+    color: #151515;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+a:hover .follow-img-1 {
+    opacity: 1;
+}
+  
+.follow-img-1, .follow-img-2, .follow-img-3 {
+    opacity: 0;
+    height: 300px;
+    width: 250px;
+    box-sizing: border-box;
+    transition: ease .2s;
+    position: absolute;
+    transform: translate(-100%, -100%);
+    z-index: -1;
+    object-fit: cover;
+}
+
+.exp-1, .exp-2, .exp-3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    color: #151515;
+    padding: 20px 60px;
+}
+
+.exp-1:hover, .exp-2:hover, .exp-3:hover {
+    padding: 20px 40px;
+    opacity: .4;
+    transition: .5s;
+}
+
+.explore-button-cont {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.explore-button {
+    max-width: 260px;
+    max-height: 120px;
+    border: 1px solid rgb(186, 186, 186);
+    border-radius: 3em;
+    color: #151515;
+    font-size: 14px;
+    font-weight: 560;
+    margin-top: 40px;
+    background-color: #E6E2DD;
+    display: inline-block;
+    padding: 30px 45px;
+    transition: .5s;
+}
+
+.explore-button:hover {
+    color: #E6E2DD;
+    border: 1px solid #2D2D2D;
+    background-color: #2D2D2D;
+    transition: .5s;
 }
