--- a/css/work.css
+++ b/css/work.css
@@ -2,59 +2,109 @@
     padding-top: 30vh;
 }
 
-.w-name h3 {
-    font-size: 16px;
-    color: #5f5f5f;
-    margin-bottom: 10vh;
-}
-
 .w-works-all {
     display: flex;
     flex-direction: column;
 }
 
-.w-wide-card {
-    width: 100%;
+@media (min-width: 420px) {
+    .w-name h3 {
+        font-size: 16px;
+        color: #5f5f5f;
+        margin-bottom: 10vh;
+    }
+
+    .w-wide-card {
+        width: 100%;
+    }
+
+    .w-wide-card .wide-img {
+        width: 100%;
+        height: 95vh;
+        object-fit: cover; 
+        transition: .5;
+    }
+
+    .w-cards {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    .w-small-card {
+        width: 48%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .w-small-card .small-img {
+        width: 100%;
+        height: 60vh;
+        object-fit: cover; 
+        transition: .5;
+    }
+
+    .w-card {
+        margin-bottom: 28vh;
+    }
+
+    .w-works-text {
+        padding-top: 60px;
+    }
 }
 
-.w-wide-card .wide-img {
-    width: 100%;
-    height: 95vh;
-    object-fit: cover; 
-    transition: .5;
-}
+@media (max-width: 420px) {
+    .w-name h3 {
+        font-size: 16px;
+        color: #5f5f5f;
+        margin-bottom: 5vh;
+    }
 
-.w-cards {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-}
+    .w-wide-card {
+        width: 100%;
+    }
 
-.w-small-card {
-    width: 48%;
-    display: flex;
-    flex-direction: column;
-}
+    .w-wide-card .wide-img {
+        width: 100%;
+        height: 35vh;
+        object-fit: cover; 
+        transition: .5;
+    }
 
-.w-small-card .small-img {
-    width: 100%;
-    height: 60vh;
-    object-fit: cover; 
-    transition: .5;
-}
+    .w-small-card .small-img {
+        width: 100%;
+        height: 35vh;
+        object-fit: cover; 
+        transition: .5;
+    }
+    
+    .w-cards {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        width: 100%;
+    }
 
-.w-card {
-    margin-bottom: 35vh;
+    .w-small-card {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .w-card {
+        margin-bottom: 10vh;
+    }
+
+    .w-works-text {
+        padding-top: 30px;
+    }
 }
 
 .w-card img:hover {
     transition: .5;
     opacity: .92;
-}
-
-.w-works-text {
-    padding-top: 60px;
 }
 
 .w-works-text p {
