--- a/css/contact.css
+++ b/css/contact.css
@@ -1,32 +1,81 @@
-.contact-content {
-    padding-top: 23vh;
-    padding-bottom: 25vh;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
+@media (min-width: 420px) {
+    .contact-content {
+        padding-top: 23vh;
+        padding-bottom: 25vh;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
+    .contact-img img {
+        width: 400px;
+        height: 550px;
+        object-fit: cover;
+    }
+
+    .contact-info {
+        width: 45vw;
+        min-height: 450px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+        color: #151515;
+    }
+
+    .contact-info h2 {
+        font-size: 62px;
+        font-weight: 600;
+        color: #151515;
+    }
+    
+    .contact-get a {
+        font-size: 160px;
+    }
 }
 
-.contact-img img {
-    width: 400px;
-    height: 550px;
-    object-fit: cover;
-}
+@media (max-width: 420px) {
+    .contact-content {
+        padding-top: 23vh;
+        padding-bottom: 25vh;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
 
-.contact-info {
-    width: 45vw;
-    min-height: 450px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-    color: #151515;
-}
+    .contact-img img {
+        width: 100%;
+        height: 450px;
+        object-fit: cover;
+        margin-bottom: 50px;
+    }
 
-.contact-info h2 {
-    font-size: 62px;
-    font-weight: 600;
-    color: #151515;
+    .contact-info {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+        color: #151515;
+    }
+
+    .contact-info h2 {
+        font-size: 60px;
+        font-weight: 600;
+        color: #151515;
+        margin-bottom: 70px;
+    }
+
+    .contact-links {
+        margin-top: 80px;
+    }
+
+    .contact-get a {
+        font-size: 70px;
+        border-bottom: 6px solid #151515;
+    }
 }
 
 .contact-c {
@@ -73,7 +122,6 @@
 }
 
 .contact-get a {
-    font-size: 160px;
     color: #151515;
     transition: .5s;
     display: inline-block;
