--- a/css/services.css
+++ b/css/services.css
@@ -18,37 +18,92 @@
     font-size: 20px;
 }
 
-.s-present h1 {
-    width: 60vw;
-    font-size: 70px;
-    align-self: flex-start;
-    padding-bottom: 30px;
-    color: #E6E2DD;
+@media (min-width: 420px) {
+    .s-present h1 {
+        width: 60vw;
+        font-size: 70px;
+        align-self: flex-start;
+        padding-bottom: 30px;
+        color: #E6E2DD;
+    }
+
+    .s-stages {
+        padding-top: 10vh;
+        padding-bottom: 180px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .s-stages img {
+        width: 400px;
+        height: 650px;
+        object-fit: cover;
+    }
+    
+    .s-stages-text-cont {
+        width: 50vw;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .s-stages-text h4 {
+        font-size: 30px;
+        color: #E6E2DD;
+    }
+
+    .s-stages-button-cont {
+        display: flex;
+        width: 100%;
+    }
+}
+
+@media (max-width: 420px) {
+    .s-present h1 {
+        width: 100%;
+        font-size: 56px;
+        align-self: flex-start;
+        padding-bottom: 30px;
+        color: #E6E2DD;
+    }
+
+    .s-stages {
+        padding-top: 10vh;
+        padding-bottom: 160px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .s-stages img {
+        width: 100%;
+        height: 450px;
+        object-fit: cover;
+        margin-bottom: 60px;
+    }
+    
+    .s-stages-text-cont {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .s-stages-text h4 {
+        font-size: 26px;
+        color: #E6E2DD;
+    }
+
+    .s-stages-button-cont {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
 }
 
 .s-present h1 span {
     color: #787878;
-}
-
-.s-stages {
-    padding-top: 10vh;
-    padding-bottom: 180px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.s-stages img {
-    width: 400px;
-    height: 650px;
-    object-fit: cover;
-}
-
-.s-stages-text-cont {
-    width: 50vw;
-    display: flex;
-    flex-direction: column;
 }
 
 .s-stages-text-cont h3 {
@@ -67,11 +122,6 @@
     margin-bottom: 12px;
 }
 
-.s-stages-text h4 {
-    font-size: 30px;
-    color: #E6E2DD;
-}
-
 .s-num {
     border: 1px solid #262626;
     border-radius: 2em;
@@ -85,11 +135,6 @@
     padding: 20px 40px;
     line-height: .5em;
     margin: 0;
-}
-
-.s-stages-button-cont {
-    display: flex;
-    width: 100%;
 }
 
 .s-stages-button {
@@ -119,33 +164,62 @@
     background-color: #F5F5F5;
 }
 
-.s-all-text {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding-top: 80px;
-    margin-bottom: 25vh;
+@media (min-width: 420px) {
+    .s-all-text {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding-top: 80px;
+        margin-bottom: 25vh;
+    }
+
+    .s-all-text h2 {
+        color: #151515;
+        font-size: 56px;
+        font-weight: 500;
+        line-height: 1;
+        width: 50vw;
+        margin: 0;
+    }
+
+    .s-all-right {
+        color: #151515;
+        font-size: 20px;
+        font-weight: 500;
+        width: 50vw;
+    }
+}
+
+@media (max-width: 420px) {
+    .s-all-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding-top: 80px;
+        margin-bottom: 180px;
+    }
+
+    .s-all-text h2 {
+        color: #151515;
+        font-size: 52px;
+        font-weight: 500;
+        line-height: 1;
+        width: 100%;
+        margin: 0 0 20px 0;
+    }
+
+    .s-all-right {
+        color: #151515;
+        font-size: 16px;
+        font-weight: 500;
+        width: 100%;
+    }
 }
 
 .s-all-text span {
     color: #9B9B9B;
-}
-
-.s-all-text h2 {
-    color: #151515;
-    font-size: 56px;
-    font-weight: 500;
-    line-height: 1;
-    width: 50vw;
-    margin: 0;
-}
-
-.s-all-right {
-    color: #151515;
-    font-size: 20px;
-    font-weight: 500;
-    width: 50vw;
 }
 
 .s-cards {
@@ -153,29 +227,42 @@
     padding-bottom: 160px;
 }
 
-@media (max-width: 420px) {
-    .s-cards { 
-        grid-template-columns: repeat(1, 1fr); 
-    }
-}
-
 @media (min-width: 420px) {
     .s-cards { 
         grid-template-columns: repeat(2, 1fr); 
     }
+
+    .s-card {
+        width: 98%;
+        height: 80vh;
+        border: 1px solid #262626;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding: 30% 40px 40px 40px;
+        position: relative;
+        margin-bottom: 20px;
+    }
 }
 
-.s-card {
-    width: 98%;
-    height: 80vh;
-    border: 1px solid #262626;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 30% 40px 40px 40px;
-    position: relative;
-    margin-bottom: 20px;
+@media (max-width: 420px) {
+    .s-cards { 
+        grid-template-columns: repeat(1, 1fr); 
+    }
+
+    .s-card {
+        width: 100%;
+        height: 50vh;
+        border: 1px solid #262626;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding: 30px 25px 60px 25px;
+        position: relative;
+        margin-bottom: 20px;
+    }
 }
 
 .s-card h2 {
