--- a/css/main.css
+++ b/css/main.css
@@ -139,13 +139,6 @@ a:hover {
     color: #9B9B9B;
 }
 
-.latest {
-    width: 100vw;
-    height: 100vh;
-    background-color: #151515;
-    position: relative;
-}
-
 .latest img {
     height: 100%;
     width: 100vw;
@@ -162,6 +155,13 @@ a:hover {
 }
 
 @media (min-width: 420px) {
+    .latest {
+        width: 100vw;
+        height: 100vh;
+        background-color: #151515;
+        position: relative;
+    }
+
     .latest-desc {
         color: #F5F5F5;
         position: absolute;
@@ -181,12 +181,19 @@ a:hover {
 }
 
 @media (max-width: 420px) {
+    .latest {
+        width: 100vw;
+        height: 60vh;
+        background-color: #151515;
+        position: relative;
+    }
+
     .latest-desc {
         color: #F5F5F5;
         position: absolute;
-        bottom: 110px;
+        bottom: 40px;
         left: 25px;
-        top: 110px;
+        top: 40px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -270,7 +277,7 @@ a:hover {
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
-        padding-top: 80px;
+        padding-top: 100px;
         margin-bottom: 25vh;
     }
 
@@ -280,7 +287,7 @@ a:hover {
         font-weight: 500;
         line-height: 1;
         width: 100%;
-        margin: 0 0 20px 0;
+        margin: 0 0 30px 0;
     }
 
     .advantages-right {
@@ -295,6 +302,12 @@ a:hover {
         font-size: 16px;
         font-weight: 500;
         width: 100%;
+        opacity: .8;
+    }
+
+    .advantages-button-cont {
+        display: flex;
+        justify-content: center;
     }
 }
 
@@ -354,11 +367,22 @@ a:hover {
     animation: marquee 35s infinite linear;
 }
 
-.brands img {
-    width: 190px;
-    opacity: .9;
-    margin: 0 0 0 98px;
-    display: inline-block;
+@media (min-width: 420px) {
+    .brands img {
+        width: 190px;
+        opacity: .9;
+        margin: 0 0 0 98px;
+        display: inline-block;
+    }
+}
+
+@media (max-width: 420px) {
+    .brands img {
+        width: 90px !important;
+        opacity: .9;
+        margin: 0 0 0 30px;
+        display: inline-block;
+    }
 }
 
 @keyframes marquee {
@@ -446,7 +470,7 @@ a:hover {
         width: 100%;
         display: flex;
         flex-direction: column;
-        margin-bottom: 60px;
+        margin-bottom: 80px;
     }
 
     .more-works-card #img1 {
@@ -464,14 +488,18 @@ a:hover {
     }
 
     .more-works-text {
-        padding-top: 30px;
+        padding-top: 20px;
     }
     
     .more-works-text h3 {
         color: #151515;
-        font-size: 32px;
+        font-size: 28px;
         font-weight: 500;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
+    }
+
+    .more-works-text p {
+        margin: 0;
     }
 }
 
@@ -479,7 +507,6 @@ a:hover {
     transition: .5;
     opacity: .92;
 }
-
 
 .more-works-text p {
     padding-bottom: 0;
@@ -572,8 +599,8 @@ a:hover {
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
-        padding-top: 80px;
-        margin-bottom: 140px;
+        padding-top: 100px;
+        margin-bottom: 120px;
     }
 
     .services h2 {
@@ -582,7 +609,7 @@ a:hover {
         font-weight: 500;
         line-height: 1;
         width: 100%;
-        margin: 0 0 20px 0;
+        margin: 0 0 30px 0;
     }
 
     .services-p {
@@ -590,6 +617,7 @@ a:hover {
         font-size: 16px;
         font-weight: 500;
         width: 100%;
+        opacity: .8;
     }
 
     .services-cards {
