--- a/css/work.css
+++ b/css/work.css
@@ -50,7 +50,7 @@
     }
 
     .w-works-text {
-        padding-top: 60px;
+        padding-top: 40px;
     }
 
     .w-works-text h3 {
@@ -64,7 +64,7 @@
 @media (max-width: 420px) {
     .w-container {
         padding-top: 30vh;
-        padding-bottom: 30vh;
+        padding-bottom: 100px;
     }
 
     .w-name h3 {
@@ -106,18 +106,18 @@
     }
 
     .w-card {
-        margin-bottom: 10vh;
+        margin-bottom: 80px;
     }
 
     .w-works-text {
-        padding-top: 30px;
+        padding-top: 20px;
     }
 
     .w-works-text h3 {
         color: #151515;
-        font-size: 32px;
+        font-size: 26px;
         font-weight: 600;
-        margin-bottom: 30px;
+        margin: 0 0 20px 0 !important;
     }
 }
 
