--- a/css/services.css
+++ b/css/services.css
@@ -5,7 +5,6 @@
 
 .s-present {
     width: 100%;
-    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -19,6 +18,10 @@
 }
 
 @media (min-width: 420px) {
+    .s-present {
+        height: 80vh;
+    }
+
     .s-present h1 {
         width: 60vw;
         font-size: 70px;
@@ -59,7 +62,11 @@
     }
 }
 
-@media (max-width: 420px) {  
+@media (max-width: 420px) { 
+    .s-present {
+        height: 100vh;
+    }
+
     .s-present {
         padding-top: 20vh;
     }
