--- a/css/contact.css
+++ b/css/contact.css
@@ -1,4 +1,4 @@
-@media (min-width: 420px) {
+@media (min-width: 460px) {
     .contact-content {
         padding-top: 23vh;
         padding-bottom: 25vh;
@@ -12,6 +12,12 @@
         width: 400px;
         height: 550px;
         object-fit: cover;
+        filter: grayscale(100%);
+        transition: .2s;
+    }
+
+    .contact-img img:hover {
+        filter: grayscale(0%);
     }
 
     .contact-info {
@@ -40,10 +46,10 @@
     }
 }
 
-@media (max-width: 420px) {
+@media (max-width: 460px) {
     .contact-content {
-        padding-top: 23vh;
-        padding-bottom: 25vh;
+        padding-top: 15vh;
+        padding-bottom: 10vh;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -52,7 +58,7 @@
 
     .contact-img img {
         width: 100%;
-        height: 450px;
+        /* height: 450px; */
         object-fit: cover;
         margin-bottom: 50px;
     }
