--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ a:hover {
         justify-content: space-between;
         align-items: flex-start;
         padding-top: 80px;
-        margin-bottom: 35vh;
+        margin-bottom: 25vh;
     }
     .advantages h2 {
         color: #151515;
@@ -269,6 +269,10 @@ a:hover {
         font-weight: 500;
         width: 50vw;
     }
+
+    .brands {
+        padding: 0 0 25vh 0;
+    }
 }
 
 @media (max-width: 460px) {
@@ -278,7 +282,7 @@ a:hover {
         justify-content: space-between;
         align-items: flex-start;
         padding-top: 80px;
-        margin-bottom: 25vh;
+        margin-bottom: 10vh;
     }
 
     .advantages h2 {
@@ -303,6 +307,10 @@ a:hover {
         font-weight: 500;
         width: 100%;
         opacity: .8;
+    }
+
+    .brands {
+        padding: 0 0 15vh 0;
     }
 }
 
@@ -348,7 +356,6 @@ a:hover {
 }
 
 .brands {
-    padding: 0 0 25vh 0;
     display: block;
     width: 100%;
     white-space: nowrap;
@@ -364,7 +371,7 @@ a:hover {
 
 @media (min-width: 460px) {
     .brands img {
-        width: 190px;
+        height: 100px;
         opacity: .9;
         margin: 0 0 0 98px;
         display: inline-block;
@@ -796,4 +803,152 @@ a:hover .follow-img-1 {
 .case-images img {
     width: 100vw;
     height: 100%;
+}
+
+
+
+/* ##################### FOOTER ############################### */
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100vw;
+    background-color: #151515;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    color: #D5D5D5;
+}
+
+.footer a {
+    color: #D5D5D5;
+}
+
+.footer a:hover {
+    text-decoration: none;
+    color: gray;
+    transition: .3s;
+}
+
+@media (min-width: 460px) {
+    .footer {
+        height: 85vh;
+    }
+
+    .foo-desc h1 {
+        font-size: 76px;
+        padding-bottom: 20px;
+    }
+
+    .foo-desc p {
+        font-size: 16px;
+        font-weight: 200;
+        opacity: .7;
+    }
+
+    .foo-info {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+        width: 100%;
+    }
+
+    .foo-contact {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .foo-contact a {
+        font-size: 30px;
+        margin-top: 20px;
+    }
+
+    .foo-links {
+        display: flex;
+        align-items: flex-end;
+        flex-direction: column;
+    }
+
+    .foo-links p {
+        color: #7A7A7A;
+        font-size: 24px;
+    }
+
+    .foo-links-row {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font-size: 18px;
+    }
+
+    .foo-links-row a {
+        margin: 10px 0 0 40px;
+        color: #D5D5D5;
+    }
+}
+
+@media (max-width: 460px) {
+    .footer {
+        height: 90vh;
+    }
+    
+    .foo-desc h1 {
+        font-size: 42px;
+        padding-bottom: 20px;
+    }
+
+    .foo-desc p {
+        font-size: 14px;
+        font-weight: 200;
+    }
+
+    .foo-info {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .foo-contact {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 30px;
+    }
+
+    .foo-contact a {
+        font-size: 28px;
+        margin-bottom: 15px;
+    }
+
+    .foo-links {
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+
+    .foo-links p {
+        color: #7A7A7A;
+        font-size: 20px;
+        margin-bottom: 30px;
+    }
+
+    .foo-links-row {
+        display: flex;
+        flex-direction: column;
+        font-size: 16px;
+    }
+
+    .foo-links-row a {
+        margin: 15px 0 0 0;
+        color: #D5D5D5;
+    }
+}
+
+.copyright {
+    font-size: 14px;
+    font-weight: 200;
+    color: #7A7A7A;
+    opacity: .7;
 }
