--- a/css/work.css
+++ b/css/work.css
@@ -5,15 +5,21 @@
     width: 100%;
 }
 
-.w-works {
-    display: grid;
-    gap: 80px 40px;
-    grid-template-columns: auto auto;
-    margin-bottom: 10vh;
-}
-
 .show {
     display: block !important;
+}
+
+.w-card {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    display: none;
+    position: relative;
+}
+
+.w-card p {
+    background-color: rgb(213, 213, 213);
+    border: none;
 }
 
 #myBtnContainer {
@@ -45,6 +51,13 @@
 }
 
 @media (min-width: 460px) {
+    .w-works {
+        display: grid;
+        gap: 80px 40px;
+        grid-template-columns: auto auto;
+        margin-bottom: 10vh;
+    }
+
     .w-container {
         padding-top: 20vh;
     }
@@ -53,14 +66,6 @@
         color: #151515;
         font-size: 60px;
         margin-bottom: 7vh;
-    }
-    
-    .w-card {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        display: none;
-        position: relative;
     }
 
     .w-img {
@@ -71,11 +76,6 @@
         margin-bottom: 10px;
     }
 
-    .w-card p {
-        background-color: rgb(213, 213, 213);
-        border: none;
-    }
-
     .w-card h3 {
         color: #151515;
         font-size: 35px;
@@ -83,93 +83,40 @@
         margin-bottom: 20px;
         line-height: 0.7;
     }
-
-.w-card figcaption {
-    position: absolute;
-    z-index: 1;
-    top: 30vh;
-    left: 50%;
-    padding: 5px 20px;
-    transform: translate(-50%, -50%);
-    line-height: 1.1em;
-    overflow: hidden;
-    height: 44px;
-}
-
-.w-card:hover figcaption,
-.w-card.hover figcaption {
-  background-color: #000000;
-}
-
-.w-card:hover .title,
-.w-card.hover .title {
-  transform: translateY(-150%);
-}
-
-.w-card:hover .hover,
-.w-card.hover .hover {
-  transform: translateY(-150%);
-}
-
 }
 
 @media (max-width: 460px) {
-    .w-container {
-        padding-top: 30vh;
-        padding-bottom: 100px;
+    .w-works {
+        display: grid;
+        gap: 40px;
+        grid-template-columns: auto;
+        margin-bottom: 10vh;
     }
 
-    .w-name h3 {
-        font-size: 16px;
-        color: #5f5f5f;
+    .w-container {
+        padding-top: 15vh;
+    }
+
+    .w-name {
+        color: #151515;
+        font-size: 45px;
+        font-weight: 500;
         margin-bottom: 5vh;
     }
 
-    .w-wide-card {
+    .w-img {
         width: 100%;
-    }
-
-    .w-wide-card .wide-img {
-        width: 100%;
-        height: 35vh;
+        height: 30vh;
         object-fit: cover; 
         transition: .5;
     }
 
-    .w-small-card .small-img {
-        width: 100%;
-        height: 35vh;
-        object-fit: cover; 
-        transition: .5;
-    }
-    
-    .w-cards {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        width: 100%;
-    }
-
-    .w-small-card {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .w-card {
-        margin-bottom: 80px;
-    }
-
-    .w-works-text {
-        padding-top: 20px;
-    }
-
-    .w-works-text h3 {
+    .w-card h3 {
         color: #151515;
-        font-size: 26px;
+        font-size: 28px;
         font-weight: 600;
-        margin: 0 0 20px 0 !important;
+        margin-bottom: 15px;
+        line-height: 1;
     }
 }
 
