--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
+::selection {
+    background: rgba(0,0,0,.0);
+    color: #00ff95;
+}
   
 body {
     overflow-x: hidden;
@@ -735,6 +740,10 @@ a:hover {
         width: 100%;
         color: #151515;
         padding: 20px 0px;
+    }
+
+    .explore-work h4 {
+        text-align: end;
     }
 }
 
