--- a/css/work.css
+++ b/css/work.css
@@ -27,10 +27,11 @@
 }
 
 .btn {
-    border: none;
+    border: 1px solid rgb(210, 210, 210);
+    background-color: #FCFAF8;
+    border-radius: 30px;
     outline: none !important;
     padding: 12px 16px;
-    background-color: #f1f1f1;
     cursor: pointer;
 }
   
@@ -53,33 +54,51 @@
 @media (min-width: 460px) {
     .w-works {
         display: grid;
-        gap: 80px 40px;
+        gap: 50px 15px;
         grid-template-columns: auto auto;
         margin-bottom: 10vh;
     }
 
     .w-container {
-        padding-top: 20vh;
+        padding-top: 10vh;
     }
 
     .w-name {
         color: #151515;
-        font-size: 60px;
-        margin-bottom: 7vh;
+        font-size: 280px;
+        margin: 0 0 1vh 0;
+        font-variant-caps: all-petite-caps;
+        font-weight: 700;
     }
 
     .w-img {
         width: 100%;
         height: 60vh;
         object-fit: cover; 
-        transition: .5;
         margin-bottom: 10px;
+    }
+
+    .w-card-i {
+        display: inline-block; 
+        overflow: hidden;
+        width: 100%;
+        height: 60vh;
+        object-fit: cover; 
+    }
+
+    .w-card-i img {
+        transition: 0.7s;
+        display: block;
+    }
+
+    .w-img:hover {
+        transform: scale(1.07);
     }
 
     .w-card h3 {
         color: #151515;
-        font-size: 35px;
-        font-weight: 600;
+        font-size: 30px;
+        font-weight: 500;
         margin-bottom: 20px;
         line-height: 0.7;
     }
@@ -118,12 +137,16 @@
         margin-bottom: 15px;
         line-height: 1;
     }
+
+    .btn {
+        margin-top: 8px;
+    }
 }
 
-.w-card img:hover {
+/* .w-card img:hover {
     transition: .5;
     opacity: .92;
-}
+} */
 
 .w-works-text p {
     color: #151515;
