--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 
 ::selection {
     background: rgba(0,0,0,.0);
-    color: #A95AE8;
+    color: #ff8153;
 }
   
 body {
@@ -333,7 +333,7 @@ a:hover {
 }
 
 .advantages-right a {
-    color: #FF6E00;
+    color: #ff6832;
     font-size: 16px;
     font-weight: 500;
     margin-top: 25px;
@@ -522,7 +522,7 @@ a:hover {
 }
 
 .explore-anno a {
-    color: #FF6E00;
+    color: #ff6832;
 }
 
 .explore-cont a {
@@ -661,7 +661,7 @@ a:hover {
 
 @media (min-width: 460px) {
     .footer {
-        height: 86vh;
+        min-height: 86vh;
     }
 
     .foo-desc {
@@ -781,6 +781,7 @@ a:hover {
 @media (max-width: 460px) {
     .footer {
         height: 90vh;
+        /* min-height: 100%; */
     }
     
     .foo-desc h1 {
@@ -843,4 +844,113 @@ a:hover {
     #myBtn {
         display: none;
     }
+}
+
+
+
+/* ----------------------------------- CASES ------------------------------------------- */
+
+.case-d {
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
+    padding-bottom: 20px;
+}
+
+.case-d-text {
+    width: 70%;
+}
+
+.case-d h2 {
+    font-size: 160px;
+    line-height: .6;
+    margin-bottom: 50px;
+}
+
+.case-d-text-all {
+    display: flex;
+    flex-direction: row;
+}
+
+.case-d-desc-y {
+    margin-right: 150px;
+}
+
+.case-d-desc {
+    width: 65%;
+}
+
+.case-d-text-all h3 {
+    font-size: 16px;
+    opacity: .5;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+
+.case-d-text-all p {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.prevnext {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.prevnext a {
+    margin: 0;
+    font-size: 110px;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+.prevnext a:hover {
+    opacity: .8;
+    text-decoration: none;
+}
+
+.case-images {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+
+.case-images img {
+    width: 100vw;
+    height: 100%;
+}
+
+.case-link {
+    position: fixed;
+    width: 100%;
+    bottom: 30px;
+    z-index: 100;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.case-a {
+    font-size: 18px;
+}
+
+.case-link a {
+    color: #ffffff;
+}
+
+.case-link button {
+    border: none;
+    background-color: #f95f27;
+    border-radius: 35px;
+    padding: 7px 20px;
+    transition: .3s;
+}
+
+.case-link button:hover {
+    background-color: #ff751f;
 }
